# smart-fox

./: .gitignore  README.md  apikey.conf.example  dump_ddg.py  main.py  pyproject.toml  settings.json  test_ddg.html  test_ddg.py  test_regex.py  test_regex2.py
.sessions/: default.json
anime_search/: __init__.py  agent.py  ai.py  anime_index.db  anime_index.db-shm  anime_index.db-wal  anime_index.py  cache.py  cli.py  config.py  engine.py  image_cache.py  knowledge_base.json  library.py  merge.py  models.py  multi_agent.py  normalizer.py  pipeline_state.py  ranking.py  ratelimit.py  recommender.py  tools.py  web.py
anime_search/providers/: __init__.py  anilist.py  base.py  jikan.py  kitsu.py
anime_search/static/: app.css  app.js
anime_search/templates/: dev_panel.html  index.html
tests/: test_merge.py  test_recommender.py
