[project]
name = "ai-anime-search"
version = "0.1.0"
description = "Async multi-source anime search and AI recommendation engine."
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
anime-search = "anime_search.cli:main"
anime-search-web = "anime_search.web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
